--- a/html/bokabord.html
+++ b/html/bokabord.html
@@ -12,7 +12,7 @@
 <body>
   <nav>
     <a href="../index.html"> Startsida </a>
-    <a href="/html/meny.html"> Meny </a>
+    <a href="/.html/meny.html"> Meny </a>
   </nav>
   <section class="bord-container">
     <form>
